--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,155 @@
+@article{Niggetiedt:2024nmp,
+    author = "Niggetiedt, Marco and Wiesemann, Marius",
+    title = "{Higgs-boson production in the full theory at NNLO+PS}",
+    eprint = "2407.01354",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2024-120",
+    doi = "10.1016/j.physletb.2024.139043",
+    journal = "Phys. Lett. B",
+    volume = "858",
+    pages = "139043",
+    year = "2024"
+}
+@article{Lindert:2022qdd,
+    author = "Lindert, Jonas M. and Lombardi, Daniele and Wiesemann, Marius and Zanderighi, Giulia and Zanoli, Silvia",
+    title = "{W$^{±}$Z production at NNLO QCD and NLO EW matched to parton showers with MiNNLO$_{PS}$}",
+    eprint = "2208.12660",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2022-98",
+    doi = "10.1007/JHEP11(2022)036",
+    journal = "JHEP",
+    volume = "11",
+    pages = "036",
+    year = "2022"
+}
+@article{Ebert:2024zdj,
+    author = "Ebert, Markus and Rottoli, Luca and Wiesemann, Marius and Zanderighi, Giulia and Zanoli, Silvia",
+    title = "{Jettiness formulation of the MiNNLO$_{PS}$ method}",
+    eprint = "2402.00596",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1007/JHEP07(2024)085",
+    journal = "JHEP",
+    volume = "07",
+    pages = "085",
+    year = "2024"
+}
+@article{Fedynitch:2015zbe,
+    author = "Fedynitch, Anatoli and Engel, Ralph and Gaisser, Thomas K. and Riehn, Felix and Stanev, Todorov",
+    title = "{$MCE_{Q}$ - numerical code for inclusive lepton flux calculations}",
+    doi = "10.22323/1.236.1129",
+    journal = "PoS",
+    volume = "ICRC2015",
+    pages = "1129",
+    year = "2016"
+}
+@article{Gauld:2022lem,
+    author = "Gauld, Rhorry and Huss, Alexander and Stagnitto, Giovanni",
+    title = "{Flavor Identification of Reconstructed Hadronic Jets}",
+    eprint = "2208.11138",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "BONN-TH-2022-17, CERN-TH-2022-121, ZU-TH 31/22",
+    doi = "10.1103/PhysRevLett.130.161901",
+    journal = "Phys. Rev. Lett.",
+    volume = "130",
+    number = "16",
+    pages = "161901",
+    year = "2023",
+    note = "[Erratum: Phys.Rev.Lett. 132, 159901 (2024)]"
+}
+@article{Mazzitelli:2023znt,
+    author = "Mazzitelli, Javier and Ratti, Alessandro and Wiesemann, Marius and Zanderighi, Giulia",
+    title = "{B-hadron production at the LHC from bottom-quark pair production at NNLO+PS}",
+    eprint = "2302.01645",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1016/j.physletb.2023.137991",
+    journal = "Phys. Lett. B",
+    volume = "843",
+    pages = "137991",
+    year = "2023"
+}
+@article{Lombardi:2020wju,
+    author = "Lombardi, Daniele and Wiesemann, Marius and Zanderighi, Giulia",
+    title = "{Advancing M\i{}NNLO$_{PS}$ to diboson processes: Z\ensuremath{\gamma} production at NNLO+PS}",
+    eprint = "2010.10478",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2020-188",
+    doi = "10.1007/JHEP06(2021)095",
+    journal = "JHEP",
+    volume = "06",
+    pages = "095",
+    year = "2021"
+}
+@article{Monni:2020nks,
+    author = "Monni, Pier Francesco and Re, Emanuele and Wiesemann, Marius",
+    title = "{MiNNLO$_{\text {PS}}$: optimizing $2\rightarrow 1$ hadronic processes}",
+    eprint = "2006.04133",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-TH-2020-084, LAPTH-027/20, MPP-2020-75",
+    doi = "10.1140/epjc/s10052-020-08658-5",
+    journal = "Eur. Phys. J. C",
+    volume = "80",
+    number = "11",
+    pages = "1075",
+    year = "2020"
+}
+@article{Monni:2019whf,
+    author = "Monni, Pier Francesco and Nason, Paolo and Re, Emanuele and Wiesemann, Marius and Zanderighi, Giulia",
+    title = "{MiNNLO$_{PS}$: a new method to match NNLO QCD to parton showers}",
+    eprint = "1908.06987",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-TH-2019-117, LAPTH-042/19, MPP-2019-177",
+    doi = "10.1007/JHEP05(2020)143",
+    journal = "JHEP",
+    volume = "05",
+    pages = "143",
+    year = "2020",
+    note = "[Erratum: JHEP 02, 031 (2022)]"
+}
+@article{Mazzitelli:2021mmm,
+    author = "Mazzitelli, Javier and Monni, Pier Francesco and Nason, Paolo and Re, Emanuele and Wiesemann, Marius and Zanderighi, Giulia",
+    title = "{Top-pair production at the LHC with MINNLO$_{PS}$}",
+    eprint = "2112.12135",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-TH-2021-220, MPP-2021-211, LAPTH-046/21, CERN-TH-2021-220,MPP-2021-211,LAPTH-046/21",
+    doi = "10.1007/JHEP04(2022)079",
+    journal = "JHEP",
+    volume = "04",
+    pages = "079",
+    year = "2022"
+}
+@article{Mazzitelli:2020jio,
+    author = "Mazzitelli, Javier and Monni, Pier Francesco and Nason, Paolo and Re, Emanuele and Wiesemann, Marius and Zanderighi, Giulia",
+    title = "{Next-to-Next-to-Leading Order Event Generation for Top-Quark Pair Production}",
+    eprint = "2012.14267",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2020-233, CERN-TH-2020-219, LAPTH-049/20",
+    doi = "10.1103/PhysRevLett.127.062001",
+    journal = "Phys. Rev. Lett.",
+    volume = "127",
+    number = "6",
+    pages = "062001",
+    year = "2021"
+}
+@article{Mazzitelli:2024ura,
+    author = "Mazzitelli, Javier and Sotnikov, Vasily and Wiesemann, Marius",
+    title = "{Next-to-next-to-leading order event generation for Z-boson production in association with a bottom-quark pair}",
+    eprint = "2404.08598",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2024-54, ZU-TH 15/24",
+    month = "4",
+    year = "2024"
+}
 @article{Gauld:2024glt,
     author = "Gauld, R. and Haisch, U. and Weiss, J.",
     title = "{A tale of $Z$+jet: SMEFT effects and the Lam-Tung relation}",
