--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,81 @@
+@article{Ravindran:2023qae,
+    author = "Ravindran, V. and Sankar, Aparna and Tiwari, Surabhi",
+    title = "{Rapidity distribution of pseudoscalar Higgs boson to NNLOA+NNLL\textasciimacron{}}",
+    eprint = "2309.14833",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "IMSc-/2022/03, MPP-2023-189, TTP23-040, P3H-23-065",
+    doi = "10.1103/PhysRevD.110.016019",
+    journal = "Phys. Rev. D",
+    volume = "110",
+    number = "1",
+    pages = "016019",
+    year = "2024"
+}
+@article{Das:2024pac,
+    author = "Das, Goutam and Sankar, Aparna",
+    title = "{Next-to-soft threshold effects on Higgs boson production via bottom quark annihilation}",
+    eprint = "2409.01553",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTK-24-29, P3H-24-056, MPP-2024-167",
+    month = "9",
+    year = "2024"
+}
+ @article{Bizon:2019tfo,
+    author = "Bizo\'n, Wojciech and Re, Emanuele and Zanderighi, Giulia",
+    title = "{NNLOPS description of the $H \to b\overline{b} $ decay with MiNLO}",
+    eprint = "1912.09982",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTP19-049, LAPTH-052/19, MPP-2019-263",
+    doi = "10.1007/JHEP06(2020)006",
+    journal = "JHEP",
+    volume = "06",
+    pages = "006",
+    year = "2020"
+}
+ @article{Asteriadis:2024nbg,
+    author = {Asteriadis, Konstantin and Behring, Arnd and Melnikov, Kirill and Novikov, Ivan and R\"ontsch, Raoul},
+    title = "{QCD corrections to Higgs boson production and H\textrightarrow{}bb\textasciimacron{} decay in weak boson fusion}",
+    eprint = "2407.09363",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTP24-019, P3H-24-040, CERN-TH-2024-095, TIF-UNIMI-2024-5",
+    doi = "10.1103/PhysRevD.110.054017",
+    journal = "Phys. Rev. D",
+    volume = "110",
+    number = "5",
+    pages = "054017",
+    year = "2024"
+}
+@article{Asteriadis:2021gpd,
+    author = {Asteriadis, Konstantin and Caola, Fabrizio and Melnikov, Kirill and R\"ontsch, Raoul},
+    title = "{NNLO QCD corrections to weak boson fusion Higgs boson production in the H \textrightarrow{} b$ \overline{b} $ and H \textrightarrow{} WW$^{*}$ \textrightarrow{} 4l decay channels}",
+    eprint = "2110.02818",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "OUTP-21-23P, TTP21-032, P3H-21-066, CERN-TH-2021-146,
+  TIF-UNIMI-2021-15",
+    doi = "10.1007/JHEP02(2022)046",
+    journal = "JHEP",
+    volume = "02",
+    pages = "046",
+    year = "2022"
+}
+@article{Behring:2019oci,
+    author = "Behring, Arnd and Bizo\'n, Wojciech",
+    title = "{Higgs decay into massive b-quarks at NNLO QCD in the nested soft-collinear subtraction scheme}",
+    eprint = "1911.11524",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "P3H-19-047, TTP19-041",
+    doi = "10.1007/JHEP01(2020)189",
+    journal = "JHEP",
+    volume = "01",
+    pages = "189",
+    year = "2020"
+}
 @article{Niggetiedt:2024nmp,
     author = "Niggetiedt, Marco and Wiesemann, Marius",
     title = "{Higgs-boson production in the full theory at NNLO+PS}",
