--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,106 @@
+@article{Baranowski:2024ysi,
+    author = "Baranowski, Daniel and Delto, Maximilian and Melnikov, Kirill and Pikelner, Andrey and Wang, Chen-Yu",
+    title = "{Triple real-emission contribution to the zero-jettiness soft function at N3LO in QCD}",
+    eprint = "2412.14001",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "12",
+    year = "2024"
+}
+
+@article{Baranowski:2024vxg,
+    author = "Baranowski, Daniel and Delto, Maximilian and Melnikov, Kirill and Pikelner, Andrey and Wang, Chen-Yu",
+    title = "{Zero-jettiness soft function to third order in perturbative QCD}",
+    eprint = "2409.11042",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTP24-033,P3H-24-061,TUM-HEP-1526/24,MPP-2024-179,ZU-TH 45/24",
+    month = "9",
+    year = "2024"
+}
+
+@article{Baranowski:2024ene,
+    author = "Baranowski, Daniel and Delto, Maximilian and Melnikov, Kirill and Pikelner, Andrey and Wang, Chen-Yu",
+    title = "{One-loop corrections to the double-real emission contribution to the zero-jettiness soft function at N3LO in QCD}",
+    eprint = "2401.05245",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2024-2,P3H-24-003,TTP24-001,TUM-HEP-1493/24,ZU-TH 03/24",
+    doi = "10.1007/JHEP04(2024)114",
+    journal = "JHEP",
+    volume = "04",
+    pages = "114",
+    year = "2024"
+}
+
+@article{Wu:2023ntn,
+    author = "Wu, Ren-Hua and Wang, Chen-Yu and Meng, Ce and Ma, Yan-Qing and Chao, Kuang-Ta",
+    title = "{Z$_{c}$ and Z$_{cs}$ systems with operator mixing at NLO in QCD sum rules}",
+    eprint = "2312.14224",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1007/JHEP06(2024)216",
+    journal = "JHEP",
+    volume = "06",
+    pages = "216",
+    year = "2024"
+}
+
+@article{Liu:2023jkr,
+    author = "Liu, Zhi-Feng and Ma, Yan-Qing and Wang, Chen-Yu",
+    title = "{Reclassifying Feynman integrals as special functions}",
+    eprint = "2311.12262",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2023-265",
+    doi = "10.1016/j.scib.2024.02.007",
+    journal = "Sci. Bull.",
+    volume = "69",
+    number = "7",
+    pages = "859--862",
+    year = "2024"
+}
+@article{Misiak:2010sk,
+    author = "Misiak, Mikolaj and Steinhauser, Matthias",
+    title = "{Large-$m_c$ Asymptotic Behaviour of $O(\alpha_s^2)$ Corrections to $B \to X_s \gamma$}",
+    eprint = "1005.1173",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTP10-21, SFB-CPP-10-28, IFT-3-2010",
+    doi = "10.1016/j.nuclphysb.2010.07.009",
+    journal = "Nucl. Phys. B",
+    volume = "840",
+    pages = "271--283",
+    year = "2010"
+}
+@article{Czakon:2015exa,
+    author = "Czakon, Micha\l{} and Fiedler, Paul and Huber, Tobias and Misiak, Miko\l{}aj and Schutzmeier, Thomas and Steinhauser, Matthias",
+    title = "{The $(Q_{7}, Q_{1,2})$ contribution to $ \overline{B}\to {X}_s\gamma $ at $ \mathcal{O}\left({\alpha}_{\mathrm{s}}^2\right) $}",
+    eprint = "1503.01791",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTK-15-08, QFET-2015-03, SI-HEP-2015-03, IFT-1-2015, TTP15-008, SFB-CPP-14-122",
+    doi = "10.1007/JHEP04(2015)168",
+    journal = "JHEP",
+    volume = "04",
+    pages = "168",
+    year = "2015"
+}
+@article{Czaja:2023ren,
+    author = {Czaja, M. and Czakon, M. and Huber, T. and Misiak, M. and Niggetiedt, M. and Rehman, A. and Sch\"onwald, K. and Steinhauser, M.},
+    title = "{The $Q_{1,2}$\textendash{}$Q_7$ interference contributions to $b \rightarrow s \gamma $ at ${\mathcal O}(\alpha _{\mathrm s}^2)$ for the physical value of $m_c$}",
+    eprint = "2309.14707",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTK-23-22, TTP23-038, P3H-23-063, ZU-TH 57/23, ALBERTA-THY-6-23,
+  SI-HEP-2023-20, MPP-2023-190",
+    doi = "10.1140/epjc/s10052-023-12270-8",
+    journal = "Eur. Phys. J. C",
+    volume = "83",
+    number = "12",
+    pages = "1108",
+    year = "2023"
+}
 @article{Ravindran:2023qae,
     author = "Ravindran, V. and Sankar, Aparna and Tiwari, Surabhi",
     title = "{Rapidity distribution of pseudoscalar Higgs boson to NNLOA+NNLL\textasciimacron{}}",
